# toban-yosui

./: .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: predict-daily.yml  scrape-kawabou.yml  scrape-toban.yml  scrape-weather.yml
prisma/: schema.prisma
prisma/migrations/20260527030015_init/: migration.sql
prisma/migrations/20260527131308_add_weather_stations/: migration.sql
prisma/migrations/20260527141407_add_predictions/: migration.sql
prisma/migrations/20260528021611_add_weather_observation/: migration.sql
scrapers/: pyproject.toml
scrapers/src/toban_scraper/: __init__.py  backfill.py  dams.py  db.py  jma_forecast.py  kawabou.py  predict.py  predict_accuracy.py  predict_deterministic.py  predict_llm.py  seed.py  toban.py  weather.py  weather_stations.py
src/app/: layout.tsx  page.tsx
src/components/: DailyReportTable.tsx  DailySummaryChart.tsx  DailySummaryChartClient.tsx  DamChart.tsx  DamChartClient.tsx  PeriodSelector.tsx  PredictionCard.tsx  RangeStats.tsx
src/lib/: dam-data.ts  jst.ts  period.ts
